<resources>
    <string name="titulo">Calculo de Material</string>
    <string name="app_name">francocambursano</string>
    <string name="botonpiso">piso</string>
    <string name="BotonPared">pared</string>
    <string name="botonescalera">escaleras</string>
    <string name="botontejas">tejas</string>
    <string name="title_activity_francomaps">Map</string>
    <string name="imgpiso">imagenpiso</string>
    <string name="imgpared">imagenpared</string>
    <string name="imgtejas">imagentejas</string>
    <string name="imgyeso">imagenyeso</string>

    <string name="txt_codigo">Codigo del Producto</string>
    <string name="txt_descripcion">Descripcion del producto</string>
    <string name="txt_precio">Precio del Producto</string>
    <string name="BontonRegistrar">Registrar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Moficiar Producto</string>


</resources>
